--- a/source/index.html
+++ b/source/index.html
@@ -383,9 +383,199 @@
   </section>
 
   <!-- faq -->
-  <section class="faq" data-test="faq">
+  <section class="section faq" data-test="faq">
     <div class="page__container">
+      <div class="faq__wrapper">
+        <h2 class="section__title faq__title">
+          Вопросы и ответы
+        </h2>
+        <div class="faq__tab-control">
+          <ul class="faq__page-list">
+            <li class="faq__page-item faq__page-item--active" data-tab="about">
+              <a class="faq__page-link" href="#">Центр</a>
+            </li>
+            <li class="faq__page-item" data-tab="subscription">
+              <a class="faq__page-link" href="#">Абонемент</a>
+            </li>
+            <li class="faq__page-item" data-tab="services">
+              <a class="faq__page-link" href="#">Услуги</a>
+            </li>
+            <li class="faq__page-item" data-tab="rules">
+              <a class="faq__page-link" href="#">Правила</a>
+            </li>
+          </ul>
 
+          <div class="faq__page-content-wrapper">
+            <!-- about -->
+            <ul class="faq__page-content-list accordion faq__page-list--active" data-tab="about">
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Как стать членом фитнес‑центра?</button>
+                <p>
+                  При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор.
+                  При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Где можно посмотреть расписание?</button>
+                <p>
+                  Вы можете ознакомиться с расписание на стойке информации, на нашем официальном сайте. Так же есть
+                  возможность оформить подписку на наши новости и получать расписание и обновления на почту каждую
+                  неделю.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Есть кулеры в центре? Предоставляются полотенца?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Сколько тренеров работает в клубе и какова их квалификация?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+            </ul>
+            <!-- subscription -->
+            <ul class="faq__page-content-list accordion" data-tab="subscription">
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Занятия с тренером входят в абонемент?</button>
+                <p>
+                  При посещении тренажерного зала вам необходимо оплатить занятия с тренером отдельно. В зале всегда
+                  присутствует дежурный тренер, которому можно задать вопрос, получить небольшую консультацию по
+                  тренажеру или технике выполнения упражнения.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Можно ли заморозить абонемент?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                  <button type="button"></button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Что такое семейный доступ и доступ для друзей?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+            </ul>
+            <!-- services -->
+            <ul class="faq__page-content-list accordion" data-tab="services>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Предлагает ли клуб услуги по консультированию по вопросам питания?</button>
+                <p>
+                  Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу. Специалист уточнит ваши
+                  данные, цели и предложит программу питания.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Проводятся ли в клубе какие-либо мероприятия или соревнования?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">>Можно ли приобрести в центре спортивное питание?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Есть ли в центре детская комната?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+            </ul>
+            <!-- rules -->
+            <ul class="faq__page-content-list accordion" data-tab="rules">
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Есть в фитнес-центре дресс-код</button>
+                <p>
+                  Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь и одежду. Верхняя
+                  и нижняя части тела должны быть закрыты (используйте футболки, майки, спортивные брюки, шорты,
+                  кроссовки). В целях безопасности, запрещается тренироваться босиком, в пляжных или домашних тапочках и
+                  т. п., исключения составляют специальные классы (например, йога, пилатес).
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Можно ли приводить с собой детей на тренировки?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Какие дополнительные правила посещения центра?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+              <li class="faq__page-content-item accordion__item">
+                <button type="button">Нужна ли медицинская справка для посещения залов и бассейна?</button>
+                <p>
+                  Вы можете ознакомиться с информацией на нашем официальном сайте.
+                </p>
+                <a class="accordion__item-expander" href="#" tabindex="-1">
+                  <span class="visually-hidden">Раскрыть/Закрыть список</span>
+                </a>
+              </li>
+            </ul>
+
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
