--- a/source/index.html
+++ b/source/index.html
@@ -276,9 +276,183 @@
   </section>
 
   <!-- jury -->
-  <section class="jury" data-test="juri">
+  <section class="section juri" data-test="juri">
     <div class="page__container">
-
+      <h2 class="section__title juri__title">Жюри</h2>
+      <div class="juri__button-wrapper">
+        <div class="juri__wrapper swiper">
+          <ul class="juri__list swiper-wrapper">
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/anna.jpg" alt="Анна Павлова" width="260" height="300">
+                </picture>
+                <figcaption>Анна Павлова</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Анна Павлова
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/alex.jpg" alt="Алексей Лавров" width="260" height="300">
+                </picture>
+                <figcaption>Алексей Лавров</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Алексей Лавров
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/sas.jpg" alt="Александр Пашков" width="260" height="300">
+                </picture>
+                <figcaption>Александр Пашков</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Александр Пашков
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/mari.jpg" alt="Мария Котова" width="260" height="300">
+                </picture>
+                <figcaption>Мария Котова</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Мария Котова
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/anna.jpg" alt="Анна Павлова" width="260" height="300">
+                </picture>
+                <figcaption>Анна Павлова</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Анна Павлова
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/alex.jpg" alt="Алексей Лавров" width="260" height="300">
+                </picture>
+                <figcaption>Алексей Лавров</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Алексей Лавров
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/sas.jpg" alt="Александр Пашков" width="260" height="300">
+                </picture>
+                <figcaption>Александр Пашков</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Александр Пашков
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+            <li class="juri__item juri__card swiper-slide">
+              <figure>
+                <picture>
+                  <img src="img/mari.jpg" alt="Мария Котова" width="260" height="300">
+                </picture>
+                <figcaption>Мария Котова</figcaption>
+              </figure>
+              <div class="juri-card__details">
+                <p class="juri-card__title">
+                  Мария Котова
+                </p>
+                <div class="juri-card__info">
+                  <p class="juri-card__sport">CrossFit</p>
+                  <ul class="juri-card__achievement-list">
+                    <li class="juri-card__achievement-item">Certified Level 3 Trainer</li>
+                    <li class="juri-card__achievement-item">Победитель чемпионата России по CrossFit</li>
+                    <li class="juri-card__achievement-item">Опыт — 6 лет</li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
