--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,7 @@
 <body class="page-body">
 
   <!-- hero -->
+  <div data-test="hero">hero</div>
   <div class="hero" data-test="hero">
     <div class="page__container">
       <header class="hero__header">
@@ -49,6 +50,7 @@
   </div>
 
   <!-- about -->
+  <div data-test="about">about</div>
   <section class="section about" data-test="about">
     <div class="page__container">
       <div class="about__wrapper">
@@ -88,6 +90,7 @@
   </section>
 
   <!-- price -->
+  <div data-test="price">price</div>
   <section class="section price" data-test="price">
     <div class="page__container">
       <div class="price__wrapper">
@@ -240,6 +243,7 @@
   </section>
 
   <!-- games -->
+  <div data-test="games">games</div>
   <section class="section games" data-test="games">
     <div class="page__container">
       <div class="game__wrapper">
@@ -276,6 +280,7 @@
   </section>
 
   <!-- jury -->
+  <div data-test="juri">juri</div>
   <section class="section juri" data-test="juri">
     <div class="page__container">
       <h2 class="section__title juri__title">Жюри</h2>
@@ -457,6 +462,7 @@
   </section>
 
   <!-- features -->
+  <div data-test="features">features</div>
   <section class="section features" data-test="features">
     <div class="page__container">
       <h2 class="section__title features__title">Наши преимущества</h2>
@@ -516,6 +522,7 @@
   </section>
 
   <!-- offers -->
+  <div data-test="offers">offers</div>
   <section class="section offers" data-test="offers">
     <div class="page__container">
       <div class="offers__wrapper">
@@ -557,6 +564,7 @@
   </section>
 
   <!-- faq -->
+  <div data-test="faq">faq</div>
   <section class="section faq" data-test="faq">
     <div class="page__container">
       <div class="faq__wrapper">
@@ -754,6 +762,7 @@
   </section>
 
   <!-- reviews -->
+  <div data-test="reviews">reviews</div>
   <section class="section reviews" data-test="reviews">
     <div class="page__container">
       <h2 class="section__title reviews__title">
@@ -797,6 +806,7 @@
   </section>
 
   <!-- form -->
+  <div data-test="form">form</div>
   <section class="section form" data-test="form">
     <div class="form">
       <div class="form__wrapper">
@@ -847,6 +857,7 @@
   </section>
 
   <!-- footer -->
+  <div data-test="footer">footer</div>
   <footer class="footer" data-test="footer">
     <div class="page__container">
       <nav class="footer__navigation navigation">
@@ -909,7 +920,8 @@
 
 
   <!-- примеры требуемых атрибутов data-test="*" -->
-  <!-- <div data-test="hero">hero</div>
+  <!--
+  <div data-test="hero">hero</div>
   <div data-test="about">about</div>
   <div data-test="price">price</div>
   <div data-test="games">games</div>
