a little scss to start

--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" data-validate="html">
+<html class="page" lang="ru" data-validate="html">
 
 <head>
   <meta charset="UTF-8">
@@ -128,7 +128,7 @@
                       <img class="subscription-card__currency" src="img/5000.png" alt="5000 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия днём</h3>
@@ -140,7 +140,7 @@
                       <img class="subscription-card__currency" src="img/1700.png" alt="1700 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия в любое время</h3>
@@ -152,7 +152,7 @@
                       <img src="img/2700.png" alt="2700 рублей>
                     </picture>
                   </p>
-                  <a class=" subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class=" subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
@@ -168,7 +168,7 @@
                       <img src="img/1700.png" alt="30000 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия днём</h3>
@@ -180,7 +180,7 @@
                       <img src="img/2700.png" alt="10200 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия в любое время</h3>
@@ -192,7 +192,7 @@
                       <img src="img/5000.png" alt="16200 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
@@ -208,7 +208,7 @@
                       <img src="img/1700.png" alt="60000 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия днём</h3>
@@ -220,7 +220,7 @@
                       <img src="img/2700.png" alt="20400 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
                 <li class="subscription__card subscription-card">
                   <h3 class="visually-hidden">Занятия в любое время</h3>
@@ -232,7 +232,7 @@
                       <img src="img/5000.png" alt="32400 рублей">
                     </picture>
                   </p>
-                  <a class="subscription-card__action button" href="#">Купить абонемент</a>
+                  <a class="subscription-card__action button button--secondary" href="#">Купить абонемент</a>
                 </li>
               </ul>
             </li>
